--- a/intellic-integration/package.json
+++ b/intellic-integration/package.json
@@ -9,8 +9,14 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@mui/icons-material": "^5.15.20",
+		"@mui/material": "^5.15.20",
 		"@nextui-org/button": "2.0.34",
+		"@nextui-org/card": "^2.0.31",
 		"@nextui-org/code": "2.0.29",
+		"@nextui-org/dropdown": "^2.1.26",
 		"@nextui-org/image": "^2.0.29",
 		"@nextui-org/input": "2.2.2",
 		"@nextui-org/kbd": "2.0.30",
