--- a/intellic-integration/package.json
+++ b/intellic-integration/package.json
@@ -15,6 +15,7 @@
   "@heroui/button": "2.2.9",
   "@heroui/card": "^2.2.10",
   "@heroui/code": "2.2.6",
+  "@heroui/divider": "^2.2.6",
   "@heroui/dropdown": "^2.3.10",
   "@heroui/image": "^2.2.6",
   "@heroui/input": "2.4.9",
@@ -31,7 +32,7 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
   "clsx": "2.1.1",
-  "framer-motion": "11.13.1",
+  "framer-motion": "^11.13.1",
   "intl-messageformat": "^10.5.0",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
